; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_request.c_hci_req_init.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_request.c_hci_req_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_request = type { i64, %struct.hci_dev*, i32 }
%struct.hci_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hci_req_init(%struct.hci_request* %0, %struct.hci_dev* %1) #0 {
  %3 = alloca %struct.hci_request*, align 8
  %4 = alloca %struct.hci_dev*, align 8
  store %struct.hci_request* %0, %struct.hci_request** %3, align 8
  store %struct.hci_dev* %1, %struct.hci_dev** %4, align 8
  %5 = load %struct.hci_request*, %struct.hci_request** %3, align 8
  %6 = getelementptr inbounds %struct.hci_request, %struct.hci_request* %5, i32 0, i32 2
  %7 = call i32 @skb_queue_head_init(i32* %6)
  %8 = load %struct.hci_dev*, %struct.hci_dev** %4, align 8
  %9 = load %struct.hci_request*, %struct.hci_request** %3, align 8
  %10 = getelementptr inbounds %struct.hci_request, %struct.hci_request* %9, i32 0, i32 1
  store %struct.hci_dev* %8, %struct.hci_dev** %10, align 8
  %11 = load %struct.hci_request*, %struct.hci_request** %3, align 8
  %12 = getelementptr inbounds %struct.hci_request, %struct.hci_request* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}

declare dso_local i32 @skb_queue_head_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
